# rust-gateway

./: .env.example  .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  bacon.toml
.github/: sync-repo-settings.yaml
.github/workflows/: test.yml
helper/: Cargo.toml
helper-macros/: Cargo.toml
helper-macros/src/test_macro/: attributes.rs
helper/src/: bin.rs  lib.rs  redis.rs  utils.rs
src/: lib.rs  main.rs
src/auth/: claims.rs  config.rs  mod.rs
src/auth/basic/: config.rs  context.rs  middleware.rs  mod.rs
src/auth/endpoint/: config.rs  context.rs  middleware.rs  mod.rs
src/auth/jwt/: builder.rs  config.rs  context.rs  middleware.rs  mod.rs
src/auth/jwt/token/: keys.rs  mod.rs  parse.rs
src/auth/oidc/: config.rs  context.rs  mod.rs
src/auth/oidc/jwt/: algorithm.rs  header.rs  mod.rs  serialization.rs  validation.rs
src/cache/: builder.rs  config.rs  context.rs  middleware.rs  mod.rs  response.rs
src/cache/datastore/: memory.rs  mod.rs  redis.rs
src/cors/: builder.rs  config.rs  context.rs  middleware.rs  mod.rs
src/gateway/: ctx.rs  entrypoint.rs  middleware.rs  mod.rs  next.rs  router.rs
src/gateway/entrypoint/: mod.rs  service.rs
src/gateway/entrypoint/tcp/: builder.rs  handler.rs  mod.rs
src/gateway/entrypoint/tls/: builder.rs  handler.rs  mod.rs  redirect.rs  resolver.rs
src/gateway/origin/: mod.rs  tcp.rs
src/gateway/origin/tcp/: builder.rs  config.rs  context.rs  mod.rs  origin.rs  response.rs
src/gateway/router/: mod.rs
src/gateway/router/any/: builder.rs  mod.rs  router.rs
src/gateway/router/param/: builder.rs  mod.rs  router.rs
src/gateway/router/regex/: builder.rs  mod.rs  router.rs
src/http/: headers.rs  health_check.rs  mod.rs  request.rs  response.rs  server.rs
src/http/stream/: mod.rs  tls.rs
src/io/: error.rs  mod.rs  streams.rs
src/rate_limit/: builder.rs  config.rs  context.rs  datastore.rs  middleware.rs  mod.rs
src/rate_limit/datastore/: memory.rs  mod.rs  redis.rs
src/server/: app.rs  health_check.rs  mod.rs  upstream_peer.rs
src/thread/: error.rs  mod.rs  pool.rs  worker.rs
src/utils/: mod.rs  time.rs
tests/: auth_basic_server.rs  auth_endpoint_server.rs  auth_jwt_server.rs  cached_server.rs  cors_server.rs  empty_server.rs  helper.rs  rate_limit_server.rs  single_server.rs  tls_server.rs
