[package]
name = "gateway"
version = "0.4.1"
edition = "2021"

[features]
debug = ["essentials/dotenv"]
default = ["cors", "rate-limit", "cache", "auth"]
auth = []
cors = []
rate-limit = []
cache = []

[dependencies]
essentials = { tag = "0.3.6", git = "https://github.com/majksa-dev/rust-essentials", features = ["all"]}
io = { tag = "0.2.1", git = "https://github.com/majksa-dev/rust-io" }
async-trait = "0.1.77"
structopt = "0.3.26"
tokio = { version = "1", features = ["full"] }
http = "1.1.0"
chrono = "0.4.38"
bb8-redis = "0.15.0"
regex = "1.10.5"
anyhow = "1.0.86"
pingora-cache = "0.2.0"
base64 = "0.22.1"

[dev-dependencies]
testing-utils = { tag = "0.1.4", git = "https://github.com/majksa-dev/rust-testing-utils" }
pretty_assertions = "1.4.0"
wiremock = "0.6.0"
