[package]
name = "gateway"
version = "0.5.4"
edition = "2021"

[features]
debug = ["essentials/dotenv"]
full = ["auth","cors","rate-limit","cache"]
auth = []
cors = []
rate-limit = []
cache = []

[dependencies]
essentials = { tag = "0.3.6", git = "https://github.com/majksa-dev/rust-essentials", features = ["all"]}
io = { tag = "0.2.2", git = "https://github.com/majksa-dev/rust-io" }
async-trait = "0.1.77"
structopt = "0.3.26"
tokio = { version = "1", features = ["full"] }
http = "1.1.0"
chrono = "0.4.38"
bb8-redis = "0.15.0"
regex = "1.10.5"
anyhow = "1.0.86"
pingora-cache = "0.2.0"
base64 = "0.22.1"
jsonwebtoken = "9.3.0"
serde = "1.0.203"
serde_json = "1.0.118"
sha2 = "0.10.8"
futures = "0.3.30"
reqwest = "0.12.5"

[dev-dependencies]
testing-utils = { tag = "0.1.5", git = "https://github.com/majksa-dev/rust-testing-utils" }
pretty_assertions = "1.4.0"
wiremock = "0.6.0"
mock_instant = "0.5.1"
