[package]
name = "gateway"
version = "0.7.0"
edition = "2021"

[features]
debug = ["essentials/dotenv"]
full = ["middlewares","tls"]
middlewares = ["auth","cors","rate-limit","cache"]
auth = ["dep:base64", "dep:jsonwebtoken", "dep:serde", "dep:serde_json", "dep:sha2", "dep:reqwest"]
cors = []
rate-limit = ["dep:bb8-redis"]
cache = ["dep:pingora-cache","dep:bb8-redis"]
tls = ["dep:tokio-rustls"]

[dependencies]
essentials = { tag = "0.3.6", git = "https://github.com/majksa-dev/rust-essentials", features = ["all"]}
io = { tag = "0.3.0", git = "https://github.com/majksa-dev/rust-io" }
async-trait = "0.1.81"
structopt = "0.3.26"
tokio = { version = "1", features = ["full"] }
http = "1.1.0"
chrono = "0.4.38"
bb8-redis = { version = "0.15.0", optional = true }
regex = "1.10.5"
anyhow = "1.0.86"
futures = "0.3.30"
pingora-cache = { version = "0.3.0", optional = true }
base64 = { version = "0.22.1", optional = true }
jsonwebtoken = { version = "9.3.0", optional = true }
serde = { version = "1.0.204", optional = true }
serde_json = { version = "1.0.120", optional = true }
sha2 = { version = "0.10.8", optional = true }
reqwest = { version = "0.12.5", optional = true }
tokio-rustls = { version = "0.26.0", optional = true }

[dev-dependencies]
testing-utils = { tag = "0.1.5", git = "https://github.com/majksa-dev/rust-testing-utils" }
pretty_assertions = "1.4.0"
wiremock = "0.6.1"
rcgen = "0.13.1"
