[package]
name = "helper-macros"
version = "0.1.2"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
essentials.workspace = true
serde = "1.0.203"
serde_json = "1.0.114"
tokio = { version = "1", features = ["full"] }
assert_fs = { version = "1.1.1", features = ["color"] }
surf = "2.3.2"
quote = "1.0.36"
proc-macro2 = "1.0.82"
syn = "2.0.61"

[dev-dependencies]
trybuild = "1.0.94"
helper = { path = "../helper" }
