[package]
name = "helper"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
essentials.workspace = true
helper-macros = { path = "../helper-macros" }
futures-util = { version = "0.3.17", default-features = false, features = ["std"] }
serde = "1.0.203"
serde_json = "1.0.114"
assert_fs = { version = "1.1.1", features = ["color"] }
surf = "2.3.2"
testcontainers = "0.16.7"
tokio = { version = "1", features = ["time"] }
